--- a/module 2/diemtb.html
+++ b/module 2/diemtb.html
@@ -7,9 +7,9 @@
 <body>
 
 <script>
-   let a = parseInt(prompt("physic"));
-   let b = parseInt(prompt("biology"));
-   let c = parseInt(prompt("chemistry"));
+   let a = parseInt(prompt("nhập điểm physic"));
+   let b = parseInt(prompt("nhập điểm biology"));
+   let c = parseInt(prompt("nhập điểm chemistry"));
 
    let total = a+b+c;
    let average = total/3;
