--- a/module 2/game/Doyouloveme.html
+++ b/module 2/game/Doyouloveme.html
@@ -4,15 +4,10 @@
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
-<style>
-    input{
-        position:absolute; left:365px; top:235px;
-    }
-</style>
 <body>
 <h1 style="position:absolute; left:220px; top:175px;">Do you love me?</h1>
-<input type="button" value=" YES " onclick="yesClick()" />
-<input type="button" id="btnNo" value="  NO  " onmouseover="noHover()"/>
+<input type="button" value=" YES " onclick="yesClick()" style="position:absolute; left:285px; top:235px;"/>
+<input type="button" id="btnNo" value="  NO  " onmouseover="noHover()" style="position:absolute; left:360px; top:235px;"/>
 <script>
     function yesClick()
     {
