--- a/module 2/game/Game_puzzle.html
+++ b/module 2/game/Game_puzzle.html
@@ -46,14 +46,14 @@
     //  let src5 = document.getElementById("right").getAttribute("src");
     //
     // }
-    function checkWin() {
-     if(getImg(top).alt === getImg(head).alt && getImg(head).alt === getImg(mid).alt && getImg(mid).alt=== getImg(left).alt&& getImg(left).alt === getImg(right).alt){
-      setTimeout(function () {
-       alert("You win");
-      },100);
-
-     }
-    }
+    // function checkWin() {
+    //  if(getImg(top).alt === getImg(head).alt && getImg(head).alt === getImg(mid).alt && getImg(mid).alt=== getImg(left).alt&& getImg(left).alt === getImg(right).alt){
+    //   setTimeout(function () {
+    //    alert("You win");
+    //   },100);
+    //
+    //  }
+    // }
 
 
 </script>
