--- a/phan2/game/good_fast_cheap.html
+++ b/phan2/game/good_fast_cheap.html
@@ -35,5 +35,14 @@
     }
 
 </script>
+<!--<input type="checkbox"  onclick= "swap('good')" id="good" alt="good"> Good-->
+<!--<input type="checkbox"  onclick= "swap('fast')" id="good" alt="fast" > fast-->
+<!--<input type="checkbox"  onclick= "swap('cheap')" id="good" alt="cheap"> cheap-->
+<!--<script>-->
+<!--    function swap(roll){-->
+<!--        let onclick = document.getElementById(roll);-->
+<!--        switch ()-->
+<!--    }-->
+<!--</script>-->
 </body>
 </html>
